изменил формат файла логотипика и название страницы

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="style.css" media="all">
-	<link rel="shortcut icon" type="image/png" href="images/%D0%9B%D0%BE%D0%B3%D0%BE/i.jpg">
-	<title>Юный падаван верстки</title>
+	<link rel="shortcut icon" type="image/jpg" href="images/%D0%9B%D0%BE%D0%B3%D0%BE/i.jpg">
+	<title>Юный падаван верстки (Моя первая работа)</title>
 </head>
 <body>
 	<header>
