создал статью про анимацию CSS3

--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
 		<div class="mid">
 			<div class="fon">
 				<div class="block">
-					<div class="anons"></div>
+					<div class="anons">
+						<section>
+							<img src="images/st1.jpg" alt="Анимация  в CSS3">
+							<h3>Как создать анимацию на сайте?</h3>
+						</section>
+					</div>	
 				</div>
 			</div>
 		</div>
