добавил анонс - 2 и задал обтекание с лева и права

--- a/index.html
+++ b/index.html
@@ -43,12 +43,26 @@
 		<div class="mid">
 			<div class="fon">
 				<div class="block">
-					<div class="anons">
-						<section>
-							<img src="images/st1.jpg" alt="Анимация  в CSS3">
-							<h3>Как создать анимацию на сайте?</h3>
-						</section>
-					</div>	
+					<a href="#">
+						<div class="anons">
+							<section>
+								<img src="images/st1.jpg" alt="Анимация  в CSS3">
+								<h3>Как создать анимацию на сайте?</h3>
+								<p>При помощи CSS3 вы можете анимировать любой элемент вашего сайта...</p>
+							</section>
+						</div>
+					</a>	
+				</div>
+				<div class="block">
+					<a href="#">
+						<div class="anons">
+							<section>
+								<img src="images/st2.jpg" alt="Адаптивный дизайн">
+								<h3>Адаптивный дизайн как сделать?</h3>
+								<p>Благодаря ему, ваш сайт будет хорошо смотреться на любом экране...</p>
+							</section>
+						</div>
+					</a>	
 				</div>
 			</div>
 		</div>
