контент готов и работает

--- a/index.html
+++ b/index.html
@@ -64,6 +64,36 @@
 						</div>
 					</a>	
 				</div>
+				<div class="clear"></div>
+				<hr class="line">
+					<div class="rec">
+						<a href="http://master-css.com/market/kurs2/demo/#Page1" target="_blank"><img src="images/v5r.jpg" alt="Картинка тренинга"></a>
+					</div>
+					<div class="clear"></div>
+					<hr class="line">
+				<div class="block">
+					<a href="#">
+						<div class="anons">
+							<section>
+								<img src="images/st4.jpg" alt="Анимация  в CSS3">
+								<h3>Как быстро научиться создавать сайты?</h3>
+								<p>Главное упорно учиться и не опускать руки перед трудностями...</p>
+							</section>
+						</div>
+					</a>	
+				</div>
+				<div class="block">
+					<a href="http://master-css.com/market/tren1/">
+						<div class="anons">
+							<section>
+								<img src="images/st3.jpg" alt="HTML5 & CSS3">
+								<h3>Новые технологии HTML5 и CSS3.</h3>
+								<p>Новые технологии верстки и веб-дизайна которые упрощают жизнь...</p>
+							</section>
+						</div>
+					</a>	
+				</div>
+				<div class="clear"></div>	
 			</div>
 		</div>
 	</div>
