--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
 		</div>
 	</div>
 	<footer>
-		<div class="mid"></div>
+		<div class="mid">
+			<span>2017 &copy;</span> <span>Спасибо Серёге Михалевичу за уроки по верстке</span>
+		</div>
 	</footer>
 </body>
 </html>
