сделал анимацию ссылок и анонсов(блоков)

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<a href="http://master-css.com/market/tren1/">
 						<div class="anons">
 							<section>
-								<img src="images/st3.jpg" alt="HTML5 & CSS3">
+								<img src="images/st3.jpg" alt="HTML5 и CSS3">
 								<h3>Новые технологии HTML5 и CSS3.</h3>
 								<p>Новые технологии верстки и веб-дизайна которые упрощают жизнь...</p>
 							</section>
