изменил много но работает

--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 						</div>
 					</a>	
 				</div>
-				<div class="clear"></div>
+				<div class="clearfix"></div>
 				<hr class="line">
 					<div class="rec">
 						<a href="http://master-css.com/market/kurs2/demo/#Page1" target="_blank"><img src="images/v5r.jpg" alt="Картинка тренинга"></a>
 					</div>
-					<div class="clear"></div>
+					<div class="clearfix"></div>
 					<hr class="line">
 				<div class="block">
 					<a href="#">
@@ -93,7 +93,7 @@
 						</div>
 					</a>	
 				</div>
-				<div class="clear"></div>	
+				<div class="clearfix"></div>	
 			</div>
 		</div>
 	</div>
